--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
-  "name": "hata",
+  "name": "agencies-lite",
   "version": "0.0.1",
   "author": "Artem Verbat",
+  "homepage": "https://github.com/verbart/agencies-lite#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/verbart/agencies-lite.git"
+  },
+  "bugs": {
+    "url": "https://github.com/verbart/agencies-lite/issues"
+  },
   "scripts": {
     "start": "NODE_ENV=development ./node_modules/.bin/gulp",
     "build": "NODE_ENV=production ./node_modules/.bin/gulp build"
